# rdf4h-vocabulary

./: README.md  rdf4h-vocabulary.cabal  stack.yaml
resources/: xsd.ttl
src/Data/RDF/Vocabulary/: DCTerms.hs  OWL.hs  RDF.hs  RDFS.hs  SHACL.hs  VANN.hs  XSD.hs
