name:                rdf4h-vocabulary
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/fabianmeyer/rdf4h-vocabulary#readme
license:             BSD3
license-file:        LICENSE
author:              Fabian Meyer
maintainer:          meyerf@gmail.com
copyright:           2017 Author name here
category:            Semantic Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Data.RDF.Vocabulary.OWL
                     , Data.RDF.Vocabulary.RDF
                     , Data.RDF.Vocabulary.RDFS
                     , Data.RDF.Vocabulary.SHACL
                     , Data.RDF.Vocabulary.VANN
                     , Data.RDF.Vocabulary.DCTerms
                     , Data.RDF.Vocabulary.XSD
  build-depends:       base
                     , text
                     , rdf4h
                     , rdf4h-vocabulary-generator

source-repository head
  type:     git
  location: https://github.com/fabianmeyer/rdf4h-vocabulary
